--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Description"></activity>
         <activity android:name=".AddItemActivity" />
         <activity android:name=".DashboardActivity" />
-        <activity android:name=".ViewPagerActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SplashScreen" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".ViewPagerActivity" />
     </application>
 
 </manifest>
